# quill

./: .env.example  .gitignore  config.yaml.example  demo.py  pyproject.toml
quill/: __init__.py  capability.py  config.py  llm.py  session.py
quill/api/: main.py
quill/artifacts/: renderer.py
quill/interview/: conductor.py  engine.py  questions.py  verifier.py
tests/: test_capability.py  test_engine.py  test_session.py
